--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,10 @@
-<ul class="nav justify-content-end">
-  <li class="nav-item" routerLinkActive="active">
-    <a class="nav-link" routerLink="/find">Find</a>
-  </li>
-  <li class="nav-item" routerLinkActive="active">
-    <a class="nav-link" routerLink="/about">About</a>
-  </li>
-</ul>
+<nav class="stroke mt-3">
+  <ul class="nav justify-content-end">
+    <li class="nav-item" >
+      <a class="nav-link" routerLinkActive="active" routerLink="/find">FIND</a>
+    </li>
+    <li class="nav-item" >
+      <a class="nav-link" routerLinkActive="active" routerLink="/about">ABOUT</a>
+    </li>
+  </ul>
+</nav>
