--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,41 @@
-.nav-link {
-    color: red;
+nav ul li a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: #a0a0a0;
+    margin: 0 0.1rem;
+    font-size: 1rem;
+  }
+nav ul li a:hover {
+    color: rgb(77, 77, 77);
+  }
+nav.stroke ul li a{
+    position: relative;
 }
+nav.stroke ul li a:after{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 0%;
+    content: '';
+    color: transparent;
+    background: rgb(77, 77, 77);
+    height: 0.1rem;
+}
+nav.stroke ul li a:hover:after {
+    width: 100%;
+}
+nav ul li a,
+nav ul li a:after,
+nav ul li a:before {
+    transition: all .5s;
+  }
+nav.stroke ul li a.active:after {
+    width: 100%;
+}
+nav.stroke ul li a.active {
+    color: rgb(77, 77, 77);
+}
+  
