--- a/src/app/find/find.component.html
+++ b/src/app/find/find.component.html
@@ -1,10 +1,11 @@
-<div class="row justify-content-center mt-3">
-  <div class="col-10">
-    <section class="text-center">
-      <div class="container">
-        <h1 class="jumbotron-heading">The Cocktail Filter</h1>
-        <p class="lead text-muted">Find your favorite cocktails by adding the ingredients separated by commas or select a category in the section below.</p>
-      </div>
+<div class="row justify-content-center">
+  <div class="col-12">
+
+
+    <!-- TITLE AND INPUT FOR SEARCH -->
+    <section class="text-center mt-3">
+      <h1 class="heading">The Cocktail Filter</h1>
+      <p class="lead text-muted">Find your favorite cocktails by adding the ingredients separated by commas or select a category in the section below.</p>
       <div class="input-group">
         <input type="text" class="form-control">
         <div class="input-group-append">
@@ -13,11 +14,41 @@
       </div>
     </section>
 
-    <div class="col-10" *ngFor="let x of categories" >
-      <a routerLink="">
-      <h3>{{x.strCategory}}</h3>
-      </a>
-    </div>
+
+    <!-- CATEGORIES -->
+    <section class="mt-3">
+      <h2 class="sub-heading">Categories</h2>
+      <div class="d-inline" *ngFor="let x of categories">
+          <a  [ngClass]="{'selected': category_selected == x.strCategory}" 
+              (click)="searchByCategory(x.strCategory)" 
+              class="badge badge-light">{{x.strCategory}}
+          </a>
+      </div>
+      <hr>
+    </section>
+
+
+    <!-- RESULTS -->
+    <section class="mt-3">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-10 col-sm-6 col-md-3 mt-3" *ngFor="let x of results">
+            <a routerLink="/drink-datail">    
+              <!-- <img src="{{x.strDrinkThumb}}" class="img-fluid rounded" alt="{{x.strDrink}}"> -->
+              <figure class="figure">
+                  <img src="{{x.strDrinkThumb}}" class="figure-img img-fluid rounded" alt="{{x.strDrink}}">
+                  <figcaption class="figure-caption">{{x.strDrink}}</figcaption>
+                </figure>
+            </a>
+          </div>
+        </div>
+      </div>
+        
+      <!-- <div class="col-2" *ngFor="let x of results">
+        <img src="{{x.strDrinkThumb}}" class="img-fluid rounded" alt="{{x.strDrink}}">
+      </div> -->
+    </section>
+
 
   </div>
 </div>
