about component done, also added some style and error messages

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,26 @@
-<p>
-  about works!
-</p>
+<div class="row justify-content-center">
+    <div class="col-12">
+  
+  
+    <!-- ABOUT INFORMATION -->
+    <section class="mt-4">
+      <div class="container">
+        <div class="row justify-content-left">
+          <div class="col-12">
+              <h2 class="text-left heading">The Cocktail DB</h2>
+              <p class="text-left lead text-muted">this website was created with the help of the api <a href="http://www.thecocktaildb.com/api.php" target="_blank"><strong>"The cocktail db"</strong></a></p>
+              <h2 class="text-left heading">Github Repository</h2>
+              <p class="text-left lead text-muted">To get the code or collaborate <a href="https://github.com/jesustorres38/Cocktaildb_Filter" target="_blank"><strong>"Github"</strong></a></p>
+              <h2 class="text-left heading">Developer</h2>
+              <p class="text-left lead text-muted">To know more abot me <a href="https://jesustorres38.github.io/" target="_blank"><strong>Jesus Torres</strong></a></p>
+              <h2 class="text-left heading">Technologies</h2>
+              <p class="text-left lead text-muted">Mainly <strong>Angular</strong> and <strong>Bootstrap</strong> </p>
+          </div>
+        </div>
+      </div>
+      <hr>
+    </section>
+      
+      
+    </div>
+  </div>
