--- a/src/app/find/find.component.html
+++ b/src/app/find/find.component.html
@@ -4,12 +4,18 @@
 
     <!-- TITLE AND INPUT FOR SEARCH -->
     <section class="text-center mt-3">
-      <h1 class="heading">The Cocktail Filter</h1>
-      <p class="lead text-muted">Find your favorite cocktails by adding the ingredients separated by commas or select a category in the section below.</p>
-      <div class="input-group">
-        <input type="text" class="form-control" [(ngModel)]="searchTerm" placeholder="Ejemplo: Lemon, Brandy">
-        <div class="input-group-append">
-          <button (click)="searchByIngredient(searchTerm)" class="btn btn-outline-secondary" type="button">Search!</button>
+      <div class="container justify-content-center">
+        <div class="row justify-content-center">
+          <div class="col-12">
+            <h1 class="heading">The Cocktail Filter</h1>
+            <p class="lead text-muted">Find your favorite cocktails by adding the ingredients separated by commas or select a category in the section below.</p>
+            <div class="input-group">
+              <input type="text" class="form-control" [(ngModel)]="searchTerm" placeholder="Example: Lemon, Brandy">
+              <div class="input-group-append">
+                <button (click)="searchByIngredient(searchTerm)" class="btn btn-outline-secondary" type="button">Search!</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -17,19 +23,26 @@
 
     <!-- CATEGORIES -->
     <section class="mt-3">
-      <h2 class="sub-heading">Categories</h2>
-      <div class="d-inline" *ngFor="let x of categories">
-          <a  [ngClass]="{'selected': category_selected == x.strCategory}" 
-              (click)="searchByCategory(x.strCategory)" 
-              class="badge badge-light">{{x.strCategory}}
-          </a>
+      <div class="container ">
+        <div class="row justify-content-center">
+          <div class="col-12">
+            <h2 class="sub-heading">Categories</h2>
+            <!-- LIST OF CATEGORIES -->
+            <div class="d-inline" *ngFor="let x of categories">
+                <a  [ngClass]="{'selected': category_selected == x.strCategory}" 
+                    (click)="searchByCategory(x.strCategory)" 
+                    class="badge badge-light">{{x.strCategory}}
+                </a>
+            </div>
+          </div>
+        </div>
       </div>
       <hr>
     </section>
 
 
     <!-- RESULTS -->
-    <section class="mt-3">
+    <section class="my-3">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-10 col-sm-6 col-md-3 mt-3" *ngFor="let x of results">
@@ -40,7 +53,11 @@
               </figure>
             </a>
           </div>
-        </div>
+          <!-- ERROR MESSAGE -->
+          <div *ngIf="errorMessage" class="col-12 text-center mt-2">
+            <p class="lead text-muted">Sorry there is no match in the database for this term: <a class="font-italic alert-link">"{{errorMessage}}"</a>. Be sure to write the ingredients separated by commas for example: Milk, sugar</p>
+          </div>
+      </div>
       </div>
     </section>
 
